MAJOR added version helper

--- a/build
+++ b/build
@@ -2,5 +2,6 @@ mkdir -p tmp
 tcc -o ./tmp/bytes ./src/bytes.c
 tcc -o ./tmp/sizeof ./src/sizeof.c
 tcc -o ./tmp/todo ./src/todo.c
+gcc -o ./tmp/mversion ./version/mversion.c
 mv ./tmp/* ~/.local/bin
 rm -rf ./tmp
